src/test/ui/const-generics/min_const_generics/default_function_param.stderr
error: default values for const generic parameters are unstable
  --> $DIR/default_function_param.rs:1:28
   |
LL | fn foo<const SIZE: usize = 5>() {}
   |                            ^
   |
   = help: add `#![feature(const_generics_defaults)]` to the crate attributes to enable

error: aborting due to previous error

